--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <h1>Humo Blanco</h1>
   <p><img src="https://i.postimg.cc/T3kmHTd5/cruz.png" alt="cruz"  width="50px"></p>
   <p>Juego divertido y rápido para elegir a un nuevo papa 2025</p>
-  <h2 id="round-title">Ronda de 16</h2>
+  <h2 id="round-title">Ronda de Cónclave</h2>
   <div id="match-container"></div>
 
   <script src="script.js"></script>
